@@ -1,20 +1,11 @@
 package com.sentrysoftware.matrix.common.meta.monitor;
 
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 
-import com.sentrysoftware.matrix.common.helpers.HardwareConstants;
 import com.sentrysoftware.matrix.common.meta.parameter.MetaParameter;
 import com.sentrysoftware.matrix.common.meta.parameter.ParameterType;
 import com.sentrysoftware.matrix.connector.model.monitor.MonitorType;
@@ -29,19 +20,33 @@ import com.sentrysoftware.matrix.model.parameter.ParameterState;
 import com.sentrysoftware.matrix.model.parameter.PresentParam;
 import com.sentrysoftware.matrix.model.parameter.StatusParam;
 
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.CURRENT_SPEED_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.CURRENT_SPEED_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PERCENT_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PRESENT_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.STATUS_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.USED_TIME_PERCENT_PARAMETER;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
+
 public class CpuCore implements IMetaMonitor {
 
 	public static final MetaParameter CURRENT_SPEED = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.CURRENT_SPEED_PARAMETER)
-			.unit(HardwareConstants.CURRENT_SPEED_PARAMETER_UNIT)
+			.name(CURRENT_SPEED_PARAMETER)
+			.unit(CURRENT_SPEED_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter USED_TIME_PERCENT = MetaParameter.builder()
 			.basicCollect(false)
-			.name(HardwareConstants.USED_TIME_PERCENT_PARAMETER)
-			.unit(HardwareConstants.PERCENT_PARAMETER_UNIT)
+			.name(USED_TIME_PERCENT_PARAMETER)
+			.unit(PERCENT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
@@ -63,17 +68,17 @@ public class CpuCore implements IMetaMonitor {
 	static {
 		final Map<String, MetaParameter> map = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		map.put(HardwareConstants.STATUS_PARAMETER, STATUS);
-		map.put(HardwareConstants.PRESENT_PARAMETER, PRESENT);
-		map.put(HardwareConstants.CURRENT_SPEED_PARAMETER, CURRENT_SPEED);
-		map.put(HardwareConstants.USED_TIME_PERCENT_PARAMETER, USED_TIME_PERCENT);
+		map.put(STATUS_PARAMETER, STATUS);
+		map.put(PRESENT_PARAMETER, PRESENT);
+		map.put(CURRENT_SPEED_PARAMETER, CURRENT_SPEED);
+		map.put(USED_TIME_PERCENT_PARAMETER, USED_TIME_PERCENT);
 
 		META_PARAMETERS = Collections.unmodifiableMap(map);
 
 		final Map<String, List<AlertRule>> alertRulesMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		alertRulesMap.put(HardwareConstants.PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
-		alertRulesMap.put(HardwareConstants.STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
+		alertRulesMap.put(PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
+		alertRulesMap.put(STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
 
 		ALERT_RULES = Collections.unmodifiableMap(alertRulesMap);
 
@@ -109,7 +114,7 @@ public class CpuCore implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusWarnCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -130,7 +135,7 @@ public class CpuCore implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusAlarmCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -151,12 +156,12 @@ public class CpuCore implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkUsedTimePercentOutsideExpectedCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedusedTimePercent = monitor.assertNumberParameter(HardwareConstants.USED_TIME_PERCENT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedusedTimePercent = monitor.assertNumberParameter(USED_TIME_PERCENT_PARAMETER, conditions);
 		if (assertedusedTimePercent.isAbnormal()) {
 
 			return AlertDetails.builder()
 					.problem(String.format("The processor core time usage is outside of expected range (%f %s).",
-							assertedusedTimePercent.getParameter().getValue(), HardwareConstants.PERCENT_PARAMETER_UNIT))
+							assertedusedTimePercent.getParameter().getValue(), PERCENT_PARAMETER_UNIT))
 					.consequence("The processing load may not be optimal and therefore lead to lower system performance.")
 					.recommendedAction("Check why this processor is used this way and whether it is caused by other failed or offlined cores or by the inability of the system to share the load across the various cores.")
 					.build();
@@ -174,12 +179,12 @@ public class CpuCore implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkUsedTimePercentOutsideToleratedCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedusedTimePercent = monitor.assertNumberParameter(HardwareConstants.USED_TIME_PERCENT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedusedTimePercent = monitor.assertNumberParameter(USED_TIME_PERCENT_PARAMETER, conditions);
 		if (assertedusedTimePercent.isAbnormal()) {
 
 			return AlertDetails.builder()
 					.problem(String.format("The processor core time usage is outside of tolerated range (%f %s).",
-							assertedusedTimePercent.getParameter().getValue(), HardwareConstants.PERCENT_PARAMETER_UNIT))
+							assertedusedTimePercent.getParameter().getValue(), PERCENT_PARAMETER_UNIT))
 					.consequence("The processing load may not be optimal and therefore lead to lower system performance.")
 					.recommendedAction("Check why this processor is used this way and whether it is caused by other failed or offlined cores or by the inability of the system to share the load across the various cores.")
 					.build();
